# OpenCV-Drone-Automation

./: CMakeLists.txt  ReadMe.md  camera_calibration.cpp  goodfeatures.cpp  hashpoints.cpp  hashpoints.h  notes.txt  test.cpp  webcam.cpp  webcamsafe.cpp  webcamset.cpp
notes/: notes.txt
unusedATM/: test.cpp
